test/valid/FieldIdEqPrimitiveObject/Main.plume
/**
 * @author Diogo Marques, 30100
 */
class Main extends Object is
	
	method main : () -> String is
		new FieldIdEqPrimitiveObject("abc").toString()