test/invalid/ClassCanOnlyHaveOneParent/ClassCanOnlyHaveOneParent.plume
/**
 * A class may only have one parent class.
 *
 * @author Diogo Marques, 30100
 */
class ClassCanOnlyHaveOneParent extends MyParent, Object is